fixed dimensions for project section, hid x-overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 /* Nav Bar Start*/
 #nav-bar {
@@ -133,6 +134,7 @@ body {
     font-size: 50px;
     position: relative;
     top: -45px;
+    left: 15px;
 }
 
 /* About Me Start */
@@ -151,17 +153,13 @@ body {
     display: flex;
     justify-content: space-between;
 }
-/*#about-title {
-    position: relative;
-    top: -45px;
-}*/
 .about-text {
     position: relative;
     top: -70px;
     width: 90%;
     font-size: 24px;
     font-family: Poppins, monospace;
-    margin-left: 3%;
+    margin-left: 4%;
 }
 #about-photos {
 }
@@ -176,13 +174,10 @@ body {
     padding-bottom: 3%;
     background-color: rgb(116, 116, 116);
 }
-/*#projects-title {
-    position: relative;
-    top: -45px;
-}*/
 #projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    text-align: center;
 }
 /* Projects End */
 
@@ -269,8 +264,8 @@ form {
 /* Footer */
 #footer {
     position: relative;
-    bottom: 0px;
     left: -8px;
+    bottom: 0px;
     padding: 1px;
     background-color: rgb(44, 44, 44);
 }
@@ -280,4 +275,5 @@ form {
     font-family: Staatliches, monospace;
     display: flex;
     justify-content: center;
+    text-align: center;
 }
